--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-sass-dts": "^1.3.16"
   },
   "keywords": [],
   "description": ""
