--- a/project3-investment-calc/package.json
+++ b/project3-investment-calc/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.6.2",
     "react-redux": "^9.1.0",
     "vite-tsconfig-paths": "^4.2.2"
   },
