--- a/project3-investment-calc/.eslintrc.json
+++ b/project3-investment-calc/.eslintrc.json
@@ -26,7 +26,8 @@
           }
         ]
       }
-    ]
+    ],
+    "react/style-prop-object": ["error", { "allow": ["FormattedNumber"] }]
   },
   "overrides": [
     { "files": ["*.{c,m,}{t,j}s", "*.{t,j}sx"] },
