--- a/template-tailwind/.eslintrc.json
+++ b/template-tailwind/.eslintrc.json
@@ -9,7 +9,12 @@
   "parserOptions": { "project": true, "tsconfigRootDir": "./" },
   "plugins": ["@typescript-eslint"],
   "root": true,
-  "ignorePatterns": ["dist", "vite.config.ts", "tailwind.config.js", "postcss.config.js"],
+  "ignorePatterns": [
+    "dist",
+    "vite.config.ts",
+    "tailwind.config.js",
+    "postcss.config.js"
+  ],
   "rules": {
     "@typescript-eslint/consistent-type-imports": [
       2,
