--- a/project6-project-management/.eslintrc.json
+++ b/project6-project-management/.eslintrc.json
@@ -8,10 +8,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": { "project": true, "tsconfigRootDir": "./" },
-  "plugins": [
-    "@typescript-eslint",
-    "react-hooks"
-  ],
+  "plugins": ["@typescript-eslint", "react-hooks"],
   "root": true,
   "ignorePatterns": [
     "dist",
