--- a/project6-project-management/package.json
+++ b/project6-project-management/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "bootstrap-icons": "svg-sprite --config svg-sprite.json --log=info --dest=./public node_modules/bootstrap-icons/icons/calendar-event.svg"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.11.3",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
@@ -34,6 +37,7 @@
     "postcss": "^8.4.33",
     "prettier": "^3.2.1",
     "sass": "^1.69.5",
+    "svg-sprite": "^2.0.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
