--- a/project6-project-management/package.json
+++ b/project6-project-management/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-intl": "^6.6.2",
+    "react-router-dom": "^6.22.1",
     "vite-tsconfig-paths": "^4.2.2",
     "zustand": "^4.5.0"
   },
